networking/ingress/Ingress.yml
#  \
#  \\,
#   \\\,^,.,,.                     Zero to Hero
#   ,;7~((\))`;;,,               <zerotohero.dev>
#   ,(@') ;)`))\;;',    stay up to date, be curious: learn
#    )  . ),((  ))\;,
#   /;`,,/7),)) )) )\,,
#  (& )`   (,((,((;( ))\,

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cerberus
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:340111760086:certificate/88c22c98-b6fb-4dc8-a00a-fd72f43aa6ec
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
  - host: fizzbuzz.pro
    http:
      paths:
      - backend:
          service:
            name: web
            port:
              number: 80
        pathType: Prefix
        path: /
  - host: www.fizzbuzz.pro
    http:
      paths:
      - backend:
          service:
            name: web
            port:
              number: 80
        pathType: Prefix
        path: /
